# operation_batches_benches

./: Cargo.toml  README.md
benches/: my_benchmark.rs
benches/implem/: mod.rs  receive_and_ask.rs  simple_receive_batch.rs
src/: lib.rs  main.rs
src/less_cpu/: algo.rs  measurements.rs  mod.rs  types.rs
src/more_cpu/: algo.rs  measurements.rs  mod.rs  types.rs
