[package]
name = "bench_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
itertools = "0.10.2"
rand = "0.8.5"
random-string = "1.0.0"

[[bench]]
name = "my_benchmark"
harness = false